# NeuralCleave

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cortexflow-backend.spec  docker-compose.yml  neuralcleave-backend.spec  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements-rag.txt  requirements-test.txt  requirements-v2.txt  requirements.txt
.github/: AGENTS.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  alembic.ini  conftest.py  pyproject.toml  requirements-ci.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/api/v1/: agents.py  approvals.py  auth.py  events.py  mcp.py  memory.py  observability.py  tools.py  workflows.py
backend/app/core/agent_runtime/: agent.py  heartbeat.py  lifecycle.py  loop.py
backend/app/core/events/: __init__.py  bus.py  handlers.py  triggers.py
backend/app/core/governance/: approvals.py  governance_engine.py  policy.py  rbac.py
backend/app/core/infrastructure/: autoscaler.py  k8s_config.py
backend/app/core/learning/: failure_detector.py  feedback.py  optimizer.py  predictor.py  recommender.py
backend/app/core/memory/: episodic.py  knowledge_graph.py  long_term.py  retrieval.py  short_term.py
backend/app/core/model_router/: deepseek.py  gemini.py  ollama.py  router.py  token_budget.py
backend/app/core/observability/: audit_trail.py  logs.py  metrics.py  metrics_collector.py  span_recorder.py  tracing.py
backend/app/core/orchestration/: __init__.py  critic.py  executor.py  observer_agent.py  orchestrator.py  planner.py  router.py  security_agent.py  validator.py
backend/app/core/reflection/: engine.py  hallucination.py  scorer.py
backend/app/core/security/: audit.py  permission_engine.py  prompt_injection.py  sandbox.py  zero_trust.py
backend/app/core/tools/: api_caller.py  browser.py  database_tool.py  filesystem.py  registry.py  shell.py
backend/app/core/workflow_engine/: checkpoints.py  dag.py  recovery.py  scheduler.py
backend/app/db/: neo4j.py  postgres.py  qdrant.py  redis.py
backend/app/db/models/: __init__.py  agent.py  audit.py  memory.py  task.py  tool_call.py  user.py  workflow.py
backend/app/schemas/: __init__.py  agents.py  approvals.py  auth.py  events.py  governance.py  memory.py  observability.py  tools.py  workflows.py
backend/app/sdk/: __init__.py  agent_sdk.py  event_sdk.py  memory_sdk.py  tool_sdk.py  workflow_sdk.py
backend/app/workers/: agent_worker.py  celery_app.py  workflow_worker.py
backend/tests/benchmarks/: __init__.py  bench_memory.py  bench_model_router.py  bench_tool_registry.py  conftest.py
backend/tests/integration/: conftest.py  test_agents_flow.py  test_auth_flow.py  test_memory_observability_flow.py  test_workflows_flow.py
backend/tests/unit/: test_agent_runtime.py  test_api_endpoints.py  test_approvals_api.py  test_audit_trail.py  test_auth_jwt.py  test_autoscaler.py  test_celery_workers.py  test_communication_bus.py  test_critic_agent.py  test_events.py  test_failure_detector.py  test_feedback.py  test_governance.py  test_governance_engine.py  test_k8s_config.py  test_mcp_api.py  test_memory.py  test_metrics_collector.py  test_model_router.py  test_observability.py  test_observer_agent.py  test_optimizer.py  test_orchestration.py  test_planner_agent.py  test_predictor.py  test_recommender.py  test_reflection.py  test_router_agent.py  test_sdk.py  test_sdk_extensions.py  test_sdk_workflow.py  test_security.py  test_security_agent.py  test_span_recorder.py  test_token_budgeting.py  test_tools.py  test_validator_agent.py  test_workflow_dag_api.py  test_workflow_engine.py
cortexflow/: __init__.py  cli.py  config.py  update_checker.py  workspace.py
cortexflow-sdk/: README.md  pyproject.toml
cortexflow_ai/: __init__.py  autostart.py  cli.py  config.py  desktop_launcher.py  init_wizard.py
deploy/: docker-compose.dev.yml  docker-compose.personal.yml  docker-compose.yml
deprecated/cortexflow/: README.md  pyproject.toml
deprecated/cortexflow-github/: pyproject.toml
deprecated/cortexflow-github/cortexflow_github/: __init__.py
deprecated/cortexflow-google-calendar/: pyproject.toml
deprecated/cortexflow-google-calendar/cortexflow_google_calendar/: __init__.py
deprecated/cortexflow/cortexflow/: __init__.py
docs/: ANALYSIS_REPORT_Claude_2026-06-10.md  BENCHMARK_vs_OpenClaw.md  COMPETITIVE_ANALYSIS_OPENCLAW.md  IDEA.md  SKILL.md  (+10 more)
docs-site/: CNAME  index.html
examples/plugins/cortexflow-github/: pyproject.toml
examples/plugins/cortexflow-github/tests/: test_plugin.py  test_tool.py
examples/plugins/cortexflow-google-calendar/: pyproject.toml
examples/plugins/cortexflow-google-calendar/src/cortexflow_google_calendar/: plugin.py
examples/plugins/cortexflow-notion/: pyproject.toml
examples/plugins/neuralcleave-github/: README.md  pyproject.toml
examples/plugins/neuralcleave-github/src/cortexflow_github/: __init__.py
examples/plugins/neuralcleave-github/src/neuralcleave_github/: __init__.py  plugin.py  tool.py
examples/plugins/neuralcleave-github/tests/: test_plugin.py  test_tool.py
examples/plugins/neuralcleave-google-calendar/: README.md  pyproject.toml
examples/plugins/neuralcleave-google-calendar/src/cortexflow_google_calendar/: tool.py
examples/plugins/neuralcleave-google-calendar/src/neuralcleave_google_calendar/: __init__.py  plugin.py  tool.py
examples/plugins/neuralcleave-google-calendar/tests/: test_plugin.py  test_tool.py
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: .gitkeep
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
neuralcleave-sdk/: README.md  pyproject.toml
neuralcleave-sdk/src/cortexflow_sdk/: channels.py
neuralcleave-sdk/src/neuralcleave_sdk/: __init__.py  plugins.py  tools.py
neuralcleave-sdk/tests/: test_channels.py  test_plugins.py  test_tools.py
(+458 files in other folders)
