[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralcleave"
version = "2.1.0"
description = "NeuralCleave — Personal AI Assistant Gateway"
authors = [{ name = "Amit Chandra", email = "ask.amitchandra@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = "BUSL-1.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "redis[asyncio]>=5.0.0",
    "qdrant-client>=1.9.0",
    "aiosqlite>=0.20.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.7.0",
    "python-telegram-bot>=21.0",
    "discord.py>=2.4.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]
voice = [
    "kokoro>=0.9.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "pyttsx3>=2.90",
]

[project.scripts]
neuralcleave = "neuralcleave.cli:main"
neuralcleave-desktop = "neuralcleave.desktop_launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuralcleave*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
