[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cortexflow-backend"
version = "0.1.0"
description = "CortexFlow — Autonomous Cognitive Operating System backend"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py bench_*.py"
python_classes = "Test* Bench*"
python_functions = "test_* bench_*"
addopts = "-v --cov=app --cov-report=term-missing --cov-fail-under=80 --ignore=tests/benchmarks"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*", "app/db/models/__init__.py"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
