[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralcleave-sdk"
version = "0.1.2"
description = "Typed interfaces for building NeuralCleave plugins, tools, and channel adapters — no gateway dependencies required."
authors = [{ name = "Amit Chandra", email = "amit.vervebot@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
