[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexflow-google-calendar"
version = "3.0.0"
description = "Deprecated — use 'neuralcleave-google-calendar' instead"
authors = [{ name = "Amit Chandra", email = "ask.amitchandra@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "neuralcleave-google-calendar>=0.1.3",
]

[project.urls]
Homepage = "https://neuralcleave.com"
Repository = "https://github.com/TheAmitChandra/NeuralCleave"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortexflow_google_calendar*"]
