[package]
name = "cortexflow-ai-desktop"
version = "0.1.0"
description = "CortexFlow-AI desktop shell — wraps the personal AI assistant web dashboard in a native window"
authors = ["Amit Chandra <ask.amitchandra@gmail.com>"]
license = "BUSL-1.1"
repository = "https://github.com/TheAmitChandra/CortexFlow-AI"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
