[package]
name = "cortexflow-ai-desktop"
version = "0.1.0"
description = "CortexFlow-AI desktop shell — wraps the personal AI assistant web dashboard in a native window"
authors = ["Amit Chandra <ask.amitchandra@gmail.com>"]
license = "BUSL-1.1"
repository = "https://github.com/TheAmitChandra/CortexFlow-AI"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"

# Global shortcuts and autostart aren't supported on mobile — gated
# the same way the official Tauri scaffolds do, so an eventual mobile
# target build doesn't break on these dependencies.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
