[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexflow-github"
version = "0.1.1"
description = "CortexFlow plugin — list recent GitHub repository events (pushes, PRs, issues)."
authors = [{ name = "Amit Chandra", email = "amit.vervebot@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "cortexflow-sdk>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.entry-points."cortexflow.plugins"]
cortexflow-github = "cortexflow_github.plugin:GitHubPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
