[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexflow-notion"
version = "0.1.2"
description = "CortexFlow plugin — search Notion pages and databases."
authors = [{ name = "Amit Chandra", email = "amit.vervebot@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "cortexflow-sdk>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.entry-points."cortexflow.plugins"]
cortexflow-notion = "cortexflow_notion.plugin:NotionPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
